# terraform-version-detector

./: .gitignore  README.md  action.yml  go.mod  go.sum  main.go  main.py  main_test.go  pyproject.toml
.github/workflows/: release.yaml  test-action.yaml  test-py.yaml
tests/app1/: terraform.tf
tests/app2/: terraform.tf
