[project]
name = "terraform-version-detector"
readme = "README.md"
version = "0.1.0"
description = "Terraform required_version detector for GitHub Actions."
maintainers = [
  {name = "skokado", email = "terutacchi@gmail.com"}
]

requires-python = ">=3.14"
dependencies = [
    "python-hcl2>=7.3.1",
]
